Better outgoing shared
