# internal/api/types.go
@@ -46,16 +46,6 @@ type SharingUserResponse struct {
 	DisplayName string `json:"display_name" example:"Jan Kowalski"`
 }
 
-type OutgoingShareResponse struct {
-	ID                int64     `json:"id" example:"42"`
-	NodeID            string    `json:"node_id" example:"_vx2a-43VqRT5wz_s9u4"`
-	NodeName          string    `json:"node_name" example:"Wspólny Projekt"`
-	NodeType          string    `json:"node_type" example:"folder"`
-	RecipientUsername string    `json:"recipient_username" example:"user2"`
-	Permissions       string    `json:"permissions" example:"write"`
-	SharedAt          time.Time `json:"shared_at"`
-}
-
 type ShareResponse struct {
 	ID          int64     `json:"id" example:"42"`
 	NodeID      string    `json:"node_id" example:"_vx2a-43VqRT5wz_s9u4"`
@@ -85,10 +75,17 @@ type LatestEventResponse struct {
 	LatestEventID int64 `json:"latest_event_id" example:"12345"`
 }
 
+type ShareDetailResponse struct {
+	ID                int64     `json:"id" example:"42"`
+	RecipientUsername string    `json:"recipient_username" example:"user2"`
+	Permissions       string    `json:"permissions" example:"write"`
+	SharedAt          time.Time `json:"shared_at"`
+}
+
 type NodeDetailResponse struct {
 	models.RichNode
-	Path   []*models.RichNode      `json:"path"`
-	Shares []OutgoingShareResponse `json:"shares,omitempty"`
+	Path   []*models.RichNode    `json:"path"`
+	Shares []ShareDetailResponse `json:"shares,omitempty"`
 }
 
 type InitiateUploadRequest struct {
